# RegionsMT

./: .appveyor.yml  .gitattributes  .travis.yml  CMakeLists.txt  Makefile  README.md  build.mk  common.mk  contrib.mk  env.mk  gather.mk  make.exe.stackdump  makefile  scan.cmake  var.mk
.MSVC/: RegionsMT.sln
.MSVC/RegionsMT/: RegionsMT.vcxproj  RegionsMT.vcxproj.filters
.contrib/: install_libraries.ps1  install_libraries.sh
.contrib/gsl/: prologue.ps1
.contrib/pthread-win32/: CMakeLists.txt  prologue.ps1
.github/workflows/: ci.yml
.install/: gsl.sh  install.ps1  install.sh  install_libraries.ps1  install_libraries.sh  lib.ps1  lib.sh  symlink.ps1
.install/gsl/: prologue.ps1  prologue.sh
.install/pthread-win32/: CMakeLists.txt  prologue.ps1
contrib/: gsl.cmake  pthread-win32.cmake
mk/: build.mk  common.mk  contrib.mk  env.mk  gather.mk  var.mk
src/: argv.c  argv.h  categorical.c  categorical.h  cmp.c  cmp.h  common.h  genotypes.c  genotypes.h  gslsupp.c  gslsupp.h  intdom.h  la.c  la.h  lde.c  ll.c  ll.h  lm.c  lm.h  log.c  log.h  main.c  main.h  memory.c  memory.h  module_categorical.c  module_categorical.h  module_input.c  module_input.h  module_lde.c  module_lde.h  module_root.c  module_root.h  mt.c  mt.h  np.c  np.h  object.c  object.h  sort.c  (+25 more)
src/module/: categorical.c  categorical.h  input.h  lde.c  lde.h  root.c
src/src/: argv.c  gslsupp.c  gslsupp.h  lde.c  lde.h  ll.c  log.c  main.c  main.h  object.c  object.h  sort.c  sortmt.c  strproc.c  strproc.h  tblproc.c  tblproc.h  test.c  test.h  threadpool.h  threadsupp.c  utf8.h
src/src/module/: categorical.c  input.c  root.h
src/src/test/: categorical.c  categorical.h  ll.h  np.c  np.h  utf8.c  utf8.h
src/test/: categorical.c  categorical.h  cmp.c  cmp.h  ll.c  ll.h  np.c  np.h  sort.c  sort.h  utf8.c  utf8.h
